basic gallery setup

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,10 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=11">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery - Carousel example</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i|Nunito:300,300i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <main>
+    <section id="intro">
+      <h1>Image Gallery / Carousel</h1>
+      <nav>
+        <p class="btn">Gallery mode</p>
+        <p class="btn">Carousel mode</p>
+      </nav>
+    </section> <!-- Intro section -->
+    <section id="gallery">
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #1</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #2</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #3</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #4</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #5</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #6</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #7</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #8</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #9</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #10</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #11</p>
+      </div>
+      <div class="gallery-item">
+        <img src="http://placekitten.com/320/240" alt="">
+        <p class="caption">Kitten #12</p>
+      </div>
+    </section> <!-- the Gallery section -->
+  </main>
+
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
