--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=11">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery - Carousel example</title>
+  <title>Gallery - Slideshow example</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i|Nunito:300,300i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main>
     <section id="intro">
-      <h1>Image Gallery / Carousel</h1>
+      <h1>Image Gallery / Slideshow</h1>
       <nav>
-        <p class="btn">Gallery mode</p>
-        <p class="btn">Carousel mode</p>
+        <p class="btn" onclick="galleryMode()">Gallery mode</p>
+        <p class="btn" onclick="slideshowMode()">Slideshow mode</p>
       </nav>
     </section> <!-- Intro section -->
     <section id="gallery">
@@ -65,6 +65,11 @@
       <div class="gallery-item">
         <img src="http://placekitten.com/320/240" alt="">
         <p class="caption">Kitten #12</p>
+      </div>
+      <!-- Next and previous buttons -->
+      <div class="slideshowNav">
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
     </section> <!-- the Gallery section -->
   </main>
