gallery<->slideshow switching

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -12,6 +12,7 @@
   <main>
     <section id="intro">
       <h1>Image Gallery / Slideshow</h1>
+      <h3>please select a mode to view the images in their respecitve layout.</h3>
       <nav>
         <p class="btn" onclick="galleryMode()">Gallery mode</p>
         <p class="btn" onclick="slideshowMode()">Slideshow mode</p>
