--- a/gallery/index.html
+++ b/gallery/index.html
@@ -69,8 +69,8 @@
       </div>
       <!-- Next and previous buttons -->
       <div class="slideshowNav">
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <a class="prev" onclick="plusSlides(-1)">&lt;</a>
+        <a class="next" onclick="plusSlides(1)">&gt;</a>
       </div>
     </section> <!-- the Gallery section -->
   </main>
