switched to random image

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -20,52 +20,52 @@
     </section> <!-- Intro section -->
     <section id="gallery">
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #1</p>
+        <img src="https://picsum.photos/320/240?random=1" alt="">
+        <p class="caption">Image #1</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #2</p>
+        <img src="https://picsum.photos/320/240?random=2" alt="">
+        <p class="caption">Image #2</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #3</p>
+        <img src="https://picsum.photos/320/240?random=3" alt="">
+        <p class="caption">Image #3</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #4</p>
+        <img src="https://picsum.photos/320/240?random=4" alt="">
+        <p class="caption">Image #4</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #5</p>
+        <img src="https://picsum.photos/320/240?random=5" alt="">
+        <p class="caption">Image #5</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #6</p>
+        <img src="https://picsum.photos/320/240?random=6" alt="">
+        <p class="caption">Image #6</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #7</p>
+        <img src="https://picsum.photos/320/240?random=7" alt="">
+        <p class="caption">Image #7</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #8</p>
+        <img src="https://picsum.photos/320/240?random=8" alt="">
+        <p class="caption">Image #8</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #9</p>
+        <img src="https://picsum.photos/320/240?random=9" alt="">
+        <p class="caption">Image #9</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #10</p>
+        <img src="https://picsum.photos/320/240?random=10" alt="">
+        <p class="caption">Image #10</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #11</p>
+        <img src="https://picsum.photos/320/240?random=11" alt="">
+        <p class="caption">Image #11</p>
       </div>
       <div class="gallery-item">
-        <img src="http://placekitten.com/320/240" alt="">
-        <p class="caption">Kitten #12</p>
+        <img src="https://picsum.photos/320/240?random=12" alt="">
+        <p class="caption">Image #12</p>
       </div>
       <!-- Next and previous buttons -->
       <div class="slideshowNav">
